feat: edit note route
